@@ -10,10 +10,6 @@ Swedish language mappings for language-dependent features of Docutils.
 
 __docformat__ = 'reStructuredText'
 
-
-from docutils import nodes
-
-
 labels = {
     'author':       u'F\u00f6rfattare',
     'authors':      u'F\u00f6rfattare',
@@ -41,19 +37,18 @@ labels = {
 
 bibliographic_fields = {
     # 'Author' and 'Authors' identical in Swedish; assume the plural:
-    u'f\u00f6rfattare': nodes.authors,
-    u'organisation':    nodes.organization,
-    u'adress':          nodes.address,
-    u'kontakt':         nodes.contact,
-    u'version':         nodes.version,
-    u'revision':        nodes.revision,
-    u'status':          nodes.status,
-    u'datum':           nodes.date,
-    u'copyright':       nodes.copyright,
-    u'dedikation':      nodes.topic, 
-    u'sammanfattning':  nodes.topic }
-"""Field name (lowcased) to node class name mapping for bibliographic fields
-(field_list)."""
+    u'f\u00f6rfattare': 'authors',
+    u'organisation':    'organization',
+    u'adress':          'address',
+    u'kontakt':         'contact',
+    u'version':         'version',
+    u'revision':        'revision',
+    u'status':          'status',
+    u'datum':           'date',
+    u'copyright':       'copyright',
+    u'dedikation':      'dedication', 
+    u'sammanfattning':  'abstract' }
+"""Swedish (lowcased) to canonical name mapping for bibliographic fields."""
 
 author_separators = [';', ',']
 """List of separator strings for the 'Authors' bibliographic field. Tried in
